# pinecone-rust-client

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml
codegen/: build-oas.sh  build-proto.sh  build-protos.sh
codegen/proto-builder/: Cargo.toml
codegen/proto-builder/src/: main.rs
codegen/proto_build/: Cargo.toml
codegen/proto_build/src/: main.rs
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/docs/: CollectionList.md  CollectionModel.md  ConfigureIndexRequest.md  ConfigureIndexRequestSpec.md  ConfigureIndexRequestSpecPod.md  CreateCollectionRequest.md  CreateIndexRequest.md  CreateIndexRequestSpec.md  DeletionProtection.md  EmbedRequest.md  EmbedRequestInputsInner.md  EmbedRequestParameters.md  Embedding.md  EmbeddingsList.md  EmbeddingsListUsage.md  ErrorResponse.md  ErrorResponseError.md  IndexList.md  IndexModel.md  IndexModelSpec.md  IndexModelStatus.md  IndexSpec.md  InferenceApi.md  ListIndexes401Response.md  ListIndexes401ResponseError.md  ManageIndexesApi.md  PodSpec.md  PodSpecMetadataConfig.md  ServerlessSpec.md
openapi/src/apis/: configuration.rs  inference_api.rs  manage_indexes_api.rs  mod.rs
openapi/src/models/: collection_list.rs  collection_model.rs  configure_index_request.rs  configure_index_request_spec.rs  configure_index_request_spec_pod.rs  create_collection_request.rs  create_index_request.rs  create_index_request_spec.rs  deletion_protection.rs  embed_request.rs  embed_request_inputs_inner.rs  embed_request_parameters.rs  embedding.rs  embeddings_list.rs  embeddings_list_usage.rs  error_response.rs  error_response_error.rs  index_list.rs  index_model.rs  index_model_spec.rs  index_model_status.rs  index_spec.rs  list_indexes_401_response.rs  list_indexes_401_response_error.rs  mod.rs  pod_spec.rs  pod_spec_metadata_config.rs  serverless_spec.rs
pinecone-sdk/src/: lib.rs
pinecone-sdk/src/models/: embedding.rs  embeddings_list_usage.rs  index_model.rs  metric.rs  mod.rs
pinecone-sdk/src/openapi/: README.md
pinecone-sdk/src/openapi/models/: collection_model.rs  configure_index_request_spec_pod.rs  create_collection_request.rs  create_index_request.rs  deletion_protection.rs  embed_request.rs  embed_request_inputs_inner.rs  embeddings_list.rs  error_response.rs  error_response_error.rs  index_model.rs  index_spec.rs  pod_spec.rs  pod_spec_metadata_config.rs
pinecone_sdk/: Cargo.toml  build.rs
pinecone_sdk/src/: config.rs  control.rs  data.rs  lib.rs  pinecone.rs  pinecone_connection.rs
pinecone_sdk/src/control/: create_index.rs  list_indexes.rs  mod.rs
pinecone_sdk/src/models/: create_index_request_params.rs  mod.rs
pinecone_sdk/src/pinecone/: control.rs  data.rs  inference.rs  mod.rs
pinecone_sdk/src/utils/: errors.rs  mod.rs  test.rs  user_agent.rs
pinecone_sdk/tests/: integration_test.rs  integration_test_control.rs  integration_test_data.rs  integration_test_inference.rs  integration_tests.rs
protos/: Cargo.toml  _.rs  build.rs  data_2024-07.proto  data_2024_07.rs  google.api.rs  mod.rs
protos/src/: lib.rs
protos/src/data/: annotations.rs  data_2024_07.rs  field_behavior.rs  http.rs  mod.rs
src/: lib.rs  version.rs
src/models/: embedding.rs  embeddings_list.rs  embeddings_list_usage.rs  index_list.rs  index_model.rs  metric.rs  mod.rs  namespace.rs  openapi.rs  wait_policy.rs
src/openapi/: README.md  mod.rs
src/openapi/apis/: configuration.rs  inference_api.rs  manage_indexes_api.rs  mod.rs
src/openapi/models/: collection_list.rs  collection_model.rs  configure_index_request.rs  configure_index_request_spec.rs  configure_index_request_spec_pod.rs  create_collection_request.rs  create_index_request.rs  deletion_protection.rs  embed_request.rs  embed_request_inputs_inner.rs  embed_request_parameters.rs  embedding.rs  embeddings_list.rs  embeddings_list_usage.rs  error_response.rs  error_response_error.rs  index_list.rs  index_model.rs  index_model_spec.rs  index_model_status.rs  index_spec.rs  list_indexes_401_response.rs  list_indexes_401_response_error.rs  mod.rs  pod_spec.rs  pod_spec_metadata_config.rs  serverless_spec.rs
src/pinecone/: control.rs  data.rs  inference.rs  mod.rs
src/protos/: mod.rs
src/utils/: errors.rs  user_agent.rs
tests/: common.rs  integration_test.rs  integration_test_control.rs  integration_test_data.rs  integration_test_inference.rs
