[package]
name = "pinecone-sdk"
version = "0.1.0"
edition = "2021"
description = "Pinecone Rust SDK"
repository = "https://github.com/pinecone-io/pinecone-rust-client"
rust-version = "1.78.0"
readme = "./README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1.10.4"
serde_json = "1.0.117"
snafu = "0.8.3"
rand = "0.8.5"
tonic = { version = "0.11.0", features = ["tls", "transport", "tls-roots"] }
prost = "0.12.6"
prost-types = "0.12.6"
# reqwest = "0.12.5"
once_cell = "1.19.0"

# openapi
serde = { version = "^1.0", features = ["derive"] }
# serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }

[dev-dependencies]
temp-env = "0.3.6"
httpmock = "0.7.0-rc.1"

[build-dependencies]
tonic-build = "0.11.0"
