[package]
name = "pinecone-sdk"
version = "0.1.2"
edition = "2021"
description = "Pinecone Rust SDK"
repository = "https://github.com/pinecone-io/pinecone-rust-client"
homepage = "https://www.pinecone.io/"
rust-version = "1.78.0"
readme = "./README.md"
license = "Apache-2.0"
keywords = ["pinecone", "vector", "database", "cloud", "vectordb"]
categories = ["api-bindings", "database"]
exclude = ["tests/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1.10"
serde_json = "1.0"
snafu = "0.8"
rand = "0.8"
tonic = { version = "0.11", features = ["tls", "transport", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"
# reqwest = "0.12"
once_cell = "1.19"

# openapi
serde = { version = "^1.0", features = ["derive"] }
# serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
thiserror = "1.0.63"
anyhow = "1.0.86"

[dev-dependencies]
temp-env = "0.3"
httpmock = "0.7.0-rc.1"
serial_test = "3.1"

[build-dependencies]
tonic-build = "0.11"
