[package]
name = "openapi"
version = "0.0.1"
authors = ["support@pinecone.io"]
description = "Pinecone is a vector database that makes it easy to search and retrieve billions of high-dimensional vectors."
license = "Apache 2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
