[package]
name = "pinecone_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "../openapi" }
tokio = { version = "1", features = ["full"] }
regex = "1.10.4"
serde_json = "1.0.117"
snafu = "0.8.3"
rand = "0.8.5"
tonic = "0.11.0"
prost = "0.12.6"
prost-types = "0.12.6"

[dev-dependencies]
mockito = "0.30"
temp-env = "0.3.6"

[build-dependencies]
tonic-build = "0.11.0"
